# tvs

./: .cproject  .gitignore  .project  CMakeLists.txt  Environment.cpp  Environment.h  Heightfield.cpp  Heightfield.h  Makefile  Makefile~  ODEUtils.cpp  ODEUtils.h  OMPLControlSpace.cpp  OMPLControlSpace.h  OMPLEnvironment.cpp  OMPLEnvironment.h  OMPLGoalRegion.cpp  OMPLGoalRegion.h  OMPLStateProjectionEvaluator.cpp  OMPLStateProjectionEvaluator.h  OMPLStatePropagator.cpp  OMPLStatePropagator.h  OMPLStateSpace.cpp  OMPLStateSpace.h  OMPLStateValidityChecker.cpp  OMPLStateValidityChecker.h  OMPLTVSControlSpace.cpp  OMPLTVSControlSpace.h  OMPLTVSEnvironment.cpp  OMPLTVSEnvironment.h  OMPLTVSSimpleSetup.cpp  OMPLTVSSimpleSetup.h  OMPLTVSStatePropagator.cpp  OMPLTVSStatePropagator.h  OMPLTVSStateSpace.cpp  OMPLTVSStateSpace.h  OMPLTVSStateValidityChecker.cpp  OMPLTVSStateValidityChecker.h  Physics.cpp  Physics.h  (+104 more)
cmake/: FindSDL2.cmake
drawstuff/: drawstuff.cpp  osx.cpp  x11.cpp
include/: Environment.h  Flipper.h  Heightfield.h  ODEUtils.h  OMPLTVSControlSpace.h  OMPLTVSEnvironment.h  OMPLTVSSimpleSetup.h  PlanarJoint.h  SimpleFlipper.h  SimpleTrack.h  SimpleTrackBase.h  SimpleTrackedVehicle.h  SimpleTrackedVehicleEnvironment.h  SkidSteerVehicleEnvironment.h  SkidSteeringVehicle.h  Track.h  TrackBase.h  TrackKinematicModel.h  TrackedVehicle.h  TrackedVehicleEnvironment.h  TriMesh.h  Vehicle.h
models/: c.stl  maze.stl
pointclouds/: pcd_0000.ds.0.05.pcd  pcd_0000.ds.0.1.pcd  pcd_0000.ds.0.1.xyz  pcd_0000.ds.0.2.pcd  pcd_0000.ds.0.2.xyz  pcd_0000.ds.0.3.pcd  pcd_0000.ds.0.3.xyz  pcd_0000.ds.0.4.pcd  pcd_0000.ds.0.4.xyz  pcd_0000.ds.0.5.pcd  pcd_0000.ds.0.5.xyz
src/: Environment.cpp  Flipper.cpp  Heightfield.cpp  ODEUtils.cpp  OMPLTVSEnvironment.cpp  OMPLTVSStateValidityChecker.cpp  PlanarJoint.cpp  PointCloud.cpp  SimpleFlipper.cpp  SimpleTrack.cpp  SimpleTrackBase.cpp  SimpleTrackedVehicle.cpp  SimpleTrackedVehicleEnvironment.cpp  SkidSteerVehicleEnvironment.cpp  SkidSteeringVehicle.cpp  Track.cpp  TrackBase.cpp  TrackedVehicle.cpp  TrackedVehicleEnvironment.cpp  TriMesh.cpp  fe.c  simulator.cpp
xcode/tvs.xcodeproj/: project.pbxproj
xcode/tvs.xcodeproj/project.xcworkspace/xcshareddata/: tvs.xccheckout
xcode/tvs.xcodeproj/project.xcworkspace/xcuserdata/user.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/tvs.xcodeproj/xcuserdata/user.xcuserdatad/xcschemes/: tvs.xcscheme  xcschememanagement.plist
